--- a/comptabilite-web-parent/comptabilite-web-client/src/main/webapp/index.xhtml
+++ b/comptabilite-web-parent/comptabilite-web-client/src/main/webapp/index.xhtml
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h:form>
+test
 <h:commandButton action="#{referentielController.appelRef}" value="#{test.msg}"/>
 </h:form>
 </body>
